--- a/calculator.html
+++ b/calculator.html
@@ -39,7 +39,7 @@
 				
 			</div>
 
-			<label>Cost of Fieldies (Inc. On Cost and roster relief factors)</label>
+			<label>Cost of Fieldies (inc. on cost and roster relief factors)</label>
 			
 			<div class="dynamics-savings-calculator-field">
 				
