--- a/calculator.html
+++ b/calculator.html
@@ -4,6 +4,8 @@
 <meta charset="utf-8">
 <title>Calculator</title>
 
+	<meta name="viewport" content= "width=device-width, initial-scale=1.0"> 
+
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="style.css" />
