--- a/calculator.html
+++ b/calculator.html
@@ -8,7 +8,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet">
 
-	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="style.min.css" />
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	
